force-app/main/default/objects/Location_Working_Hours__c/Location_Working_Hours__c.object-meta.xml
<CustomObject>
    <label>Location Working Hour</label>
    <nameField>
        <displayFormat>LWH-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Working Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>