force-app/main/default/objects/Location_Working_Hours__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <inlineHelpText>Weekday for which working hour is  being defined</inlineHelpText>
    <label>Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Weekdays</valueSetName>
    </valueSet>
</CustomField>