force-app/main/default/objects/Location_Working_Hours__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <inlineHelpText>Shift End Time</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>