force-app/main/default/objects/Location_Working_Hours__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <inlineHelpText>Shift start time</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>