force-app/main/default/objects/Location_Working_Hours__c/validationRules/Time_can_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_can_not_be_blank</fullName>
    <active>true</active>
    <description>This validation rule is use for to validate time  when a user creating the working hours record and rule is active so that time, start time and end time shouldn&apos;t blank end time must be greater than start time.</description>
    <errorConditionFormula>Start_Time__c &gt;= End_Time__c</errorConditionFormula>
    <errorMessage>Start time must less than end time</errorMessage>
</ValidationRule>